--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.6",
